# shwatt

./: .dir-locals.el  .gitignore  .guix-channel  Makefile.am  README.org  TODO.org  configure.ac  guix.scm  shwatt.asd
.guix/modules/: shwatt-package.scm
doc/: local.mk  shwatt.texi
source/: shwatt.lisp
tests/: example.lisp
